Fix header expose 접근